--- a/.gitignore
+++ b/.gitignore
@@ -29,5 +29,18 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-### VS Code ###
+### IDEs ###
 .vscode/
+.settings
+
+### BIN ###
+*.log
+*.class
+
+### .ENV ###
+.env
+
+### CLIENTS DATABASE ###
+clients.sqbpro
+clients.db
+clients.db-journal
