--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,13 @@
             <version>2.2.0</version>
         </dependency>
 
+		<!-- Gson para manipulação de JSON -->
+		<dependency>
+    		<groupId>com.google.code.gson</groupId>
+    		<artifactId>gson</artifactId>
+    		<version>2.11.0</version>
+		</dependency>
+
         <!-- Dependência do SQLite JDBC -->
         <dependency>
             <groupId>org.xerial</groupId>
